--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1.0,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "rust_incdbscan"
+name = "incdbscan-rs"
 version = "0.1.0"
 description = "High-performance Rust implementation of IncrementalDBSCAN with Python bindings."
 readme = "README.md"
@@ -33,7 +33,7 @@ dev = ["pytest>=7.0", "scikit-learn>=1.0"]
 [tool.maturin]
 features = ["extension-module"]
 python-source = "python"
-module-name = "rust_incdbscan._rust_incdbscan"
+module-name = "incdbscan_rs._incdbscan_rs"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
