--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
   python-tests:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
     steps:
@@ -26,8 +27,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - uses: dtolnay/rust-toolchain@stable
       - name: Install dependencies
-        run: pip install maturin numpy pytest scikit-learn
+        run: pip install maturin pytest scikit-learn
       - name: Build and install
-        run: maturin develop --release
+        run: pip install '.[dev]'
       - name: Run tests
         run: pytest tests/ -v
